@@ -30,8 +30,8 @@ captures
 /composeApp/src/commonTest/kotlin/com/arn/scrobble/AuthTest.kt
 /composeApp/src/desktopTest/kotlin/com/arn/scrobble/DesktopAuthTests.kt
 /dist
-composeApp/src/androidRelease/generated
-composeApp/src/androidReleaseGithub/generated
+androidApp/src/release/generated
+androidApp/src/releaseGithub/generated
 /composeApp/src/**/composeResources/files/aboutlibraries.json
 crowdin.properties
 Gemfile.lock
